--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,15 +12,14 @@
     <div class="column">
       <div class="card">
         <div class="card-content">
-          <h2 class="title">What have you eaten today?</h2>
-          <h3 class="subtitle">Returns list of items.</h3>
+          <h2 class="title">What kind of burger would you like?</h2>
         </div>
         <footer class="card-footer">
           <div class="card-footer-item">
-            <label for="foodTextEntry">Enter a food here: </label>
+            <label for="foodTextEntry">Enter your order: </label>
             <input id="foodTextEntry" type="text" />
             <a href="#" class="button is-success" id="searchButton">
-              <i class="fas fa-thumbs-up"></i>
+              <i class="Submit"></i>
             </a>
           </div>
         </footer>
