--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&family=Raleway+Dots&display=swap"
 		rel="stylesheet">
 
-	<title>Whatcha gonna eat?</title>
+	<title>Eat The Burger!</title>
 
 </head>
 
