--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,4 @@
-<section class="hero is-primary">
+<section class="hero is-warning">
   <div class="hero-body">
     <div class="container">
       <h1 class="title is-1">Eat The Burger!!<h1>
@@ -23,69 +23,24 @@
             </a>
           </div>
         </footer>
-      </div>
-    </div>
+        <div class="row">
+          <div class="columns">
+            <div class="column">
+              <div class="card">
+                <div class="card-content">
+                  <h2 class="title">Order Items: </h2>
+                </div>
+                  <div class="card-footer-item">
 
-    <div class="column">
-      <div class="card">
-        <div class="card-content">
-          <h2 class="title">Can't find the food you've searched for?</h2>
-          <h3 class="subtitle">Manually Enter Below.</h3>
+                  </div>
+              </div>
+            </div>
+          </div>
         </div>
-        <footer class="card-footer">
-          <div class="card-footer-item">
-            <label for="customFoodTextEntry">Enter a food here: </label>
-            <input id="customFoodTextEntry" type="text" />
-          </div>
-        </footer>
-        <footer class="card-footer">
-          <div class="card-footer-item">
-            <label for="enterCustomCalories">Enter Caloric Value: </label>
-            <input id="enterCustomCalories" type="text" />
-            <a href="#" class="button is-success" id="customButton">
-              <i class="fas fa-thumbs-up"></i>
-            </a>
-          </div>
-        </footer>
-      </div>
-    </div>
-
-
-    <div class="column">
-      <div class="card">
-        <div class="card-content">
-          <h2 class="title">Calories burned today?</h2>
-          <h3 class="subtitle">Enter the number of Calories you've burned today!</h3>
-        </div>
-        <footer class="card-footer">
-          <div class="card-footer-item">
-            <label for="enterBurnedCalories">Enter your calories burned: </label>
-            <input id="enterBurnedCalories" type="text" />
-            <a href="#" class="button is-success" id="caloriesBurnedButton">
-              <i class="fas fa-thumbs-up"></i>
-            </a>
-          </div>
-        </footer>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="row">
-  <div class="columns">
-    <div class="column">
-      <div class="card">
-        <div class="card-content">
-          <h2 class="title">Items Searched will appear here: </h2>
-        </div>
-        <footer class="card-footer">
-          <div class="card-footer-item">
-
-          </div>
-        </footer>
-      </div>
-    </div>
 
 
 
-    <input type="text" id="input">
+
+
+
+        <input type="text" id="input">
